replace deprecated hgroup elements

--- a/templates/company/payments.hbs
+++ b/templates/company/payments.hbs
@@ -1,8 +1,8 @@
 <div class="container narrow">
 
-  <hgroup>
+  <header>
     <h1>Listing on npm's Who's Hiring</h1>
-  </hgroup>
+  </header>
 
   <section class="payment">
 
