--- a/templates/company/whoshiring.hbs
+++ b/templates/company/whoshiring.hbs
@@ -1,7 +1,7 @@
-<hgroup>
+<header>
   <h1>{{t "company.whoshiring.title"}}</h1>
   <h2>{{t "company.whoshiring.subtitle"}}</h2>
-</hgroup>
+</header>
 
 <div class="hiring-container" data-template="full"></div>
 
