--- a/templates/enterprise/license-options.hbs
+++ b/templates/enterprise/license-options.hbs
@@ -1,9 +1,9 @@
 <div class="container tablet-width">
 
-  <hgroup>
+  <header>
     <h1>npm On-Site</h1>
     <h2>Licensing options</h2>
-  </hgroup>
+  </header>
 
   <section>
     <h2>Starter pack: $25/month for up to 5 seats</h2>
