--- a/templates/enterprise/license-paid.hbs
+++ b/templates/enterprise/license-paid.hbs
@@ -1,8 +1,8 @@
 <div class="container tablet-width">
 
-  <hgroup>
+  <header>
     <h1>npm On-Site</h1>
-  </hgroup>
+  </header>
 
   <section>
     <h2>Thanks for your payment</h2>
