--- a/templates/errors/package-not-found.hbs
+++ b/templates/errors/package-not-found.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <hgroup>
+  <header>
     <h1>{{t "package.not_found.title"}}</h1>
     <h2>
       {{#if package.available}}
@@ -16,7 +16,7 @@
         {{/if}}
       {{/if}}
     </h2>
-  </hgroup>
+  </header>
 </div>
 
 <div class="container narrow">
