--- a/templates/errors/user-not-found.hbs
+++ b/templates/errors/user-not-found.hbs
@@ -1,9 +1,9 @@
 <div class="container narrow">
 
-  <hgroup>
+  <header>
     <h1>{{name}}?</h1>
     <h2>{{t "user.profile.not_found.subtitle"}}</h2>
-  </hgroup>
+  </header>
 
   <p>
     If you believe that this is a bug, please
