--- a/templates/org/info.hbs
+++ b/templates/org/info.hbs
@@ -1,8 +1,8 @@
 <div class="container">
 
-  <hgroup>
+  <header>
     <h1 class="billing-header">{{org.info.name}}</h1>
-  </hgroup>
+  </header>
 
   <div class="tabs">
     <div class="tab-nav-container">
