--- a/templates/user/email-confirmed.hbs
+++ b/templates/user/email-confirmed.hbs
@@ -4,10 +4,10 @@
 
 <div class="container narrow">
 
-  <hgroup>
+  <header>
     <h1>hi again</h1>
     <h2>thanks for verifying your email address</h2>
-  </hgroup>
+  </header>
 
   <p>
     Now that you've cleared that up, you might want to
