--- a/templates/user/email-edit.hbs
+++ b/templates/user/email-edit.hbs
@@ -2,9 +2,9 @@
 
 <div class="container narrow">
 
-  <hgroup>
+  <header>
     <h1>edit email address</h1>
-  </hgroup>
+  </header>
 
   {{#unless submitted}}
 
