--- a/templates/user/login.hbs
+++ b/templates/user/login.hbs
@@ -1,9 +1,9 @@
 <div class="container narrow">
 
-  <hgroup>
+  <header>
     <h1>{{t "user.login.title"}}</h1>
     <h2>{{t "user.login.subtitle"}}</h2>
-  </hgroup>
+  </header>
 
   {{> errors}}
 
