--- a/templates/user/password.hbs
+++ b/templates/user/password.hbs
@@ -1,9 +1,9 @@
 {{> profile-secondary-nav}}
 
 <div class="container narrow">
-  <hgroup>
+  <header>
     <h1>change password</h1>
-  </hgroup>
+  </header>
 
   <form data-tab="password" method="post" action="/password">
 
