--- a/templates/user/profile-edit.hbs
+++ b/templates/user/profile-edit.hbs
@@ -2,9 +2,9 @@
 
 <div class="container narrow">
 
-  <hgroup>
+  <header>
     <h1>edit your profile</h1>
-  </hgroup>
+  </header>
 
   {{#if showWelcomeMessage}}
     <p class="notice">
