--- a/templates/user/signup-form.hbs
+++ b/templates/user/signup-form.hbs
@@ -1,9 +1,9 @@
 <div class="container narrow">
 
-  <hgroup>
+  <header>
     <h1>{{t "user.signup.title"}}</h1>
     <h2>{{t "user.signup.subtitle"}}</h2>
-  </hgroup>
+  </header>
 
   {{> errors}}
 
