--- a/templates/company/private-modules.hbs
+++ b/templates/company/private-modules.hbs
@@ -1,8 +1,8 @@
 <div class="tablet-width markdown container">
-<hgroup>
+<header>
   <h1>npm Private Modules</h1>
   <h2>create and share unlimited private modules for $7/month</h2>
-</hgroup>
+</header>
 
 {{#unless isPaid}}
   {{{benefits}}}
