--- a/templates/enterprise/check-email.hbs
+++ b/templates/enterprise/check-email.hbs
@@ -1,8 +1,8 @@
 <div class="container tablet-width">
-  <hgroup>
+  <header>
     <h1>npm On-Site</h1>
     <h2>time to check your email</h2>
-  </hgroup>
+  </header>
 
   <p>
     A verification link has been sent to your email. Click the link in the
