--- a/templates/enterprise/clickThroughAgreement.hbs
+++ b/templates/enterprise/clickThroughAgreement.hbs
@@ -1,9 +1,9 @@
 <div class="container tablet-width">
 
-  <hgroup>
+  <header>
     <h1>npm On-Site</h1>
     <h2>Two ways to get started</h2>
-  </hgroup>
+  </header>
 
   <section>
     <h2>Option 1: Download now</h2>
