--- a/templates/enterprise/contact-me.hbs
+++ b/templates/enterprise/contact-me.hbs
@@ -1,8 +1,8 @@
 <div class="container tablet-width">
-  <hgroup>
+  <header>
     <h1>npm On-Site</h1>
     <h2>We'll be in touch!</h2>
-  </hgroup>
+  </header>
 
   <p>Thanks for your interest in npm On-Site. We'll be in touch by email in the next working day.</p>
 </div>
