replaced hgroup with divs and modified styles to use .titlegroup

--- a/templates/company/payments.hbs
+++ b/templates/company/payments.hbs
@@ -1,8 +1,8 @@
 <div class="container narrow">
 
-  <header>
+  <div class="titlegroup">
     <h1>Listing on npm's Who's Hiring</h1>
-  </header>
+  </div>
 
   <section class="payment">
 
