--- a/templates/errors/internal.hbs
+++ b/templates/errors/internal.hbs
@@ -1,9 +1,9 @@
 <div class="container narrow">
 
-  <header>
+  <div class="titlegroup">
     <h1>{{t "errors.generic.title"}}</h1>
     <h2>{{t "errors.generic.subtitle"}}</h2>
-  </header>
+  </div>
 
   <p>
     If you feel this error is the result of a bug, please
