--- a/templates/errors/not-found.hbs
+++ b/templates/errors/not-found.hbs
@@ -1,10 +1,10 @@
 <div class="container">
-  <header>
+  <div class="titlegroup">
     <h1>not found</h1>
     <h2>
       {{canonicalURL}} does not exist. time to go outside.
     </h2>
-  </header>
+  </div>
 </div>
 
 <div class="container narrow">
