--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -46,7 +46,7 @@
   {{#unless features.npmo}}
     <div id="notification-banner" class="hidden">
       <div class="container">
-        <header>
+        <div class="titlegroup">
           <a href="/private-modules"
             data-event-trigger="click"
             data-event-name="private-modules-banner-signup-via-wombat">
@@ -54,7 +54,7 @@
           </a>
           <h2>private npm is here.</h2>
           <h3>publish unlimited private modules for just $7/month</h3>
-        </header>
+        </div>
         <a class="button" href="/private-modules"
           data-event-trigger="click"
           data-event-name="private-modules-banner-signup">sign up</a>
