--- a/templates/org/info.hbs
+++ b/templates/org/info.hbs
@@ -1,8 +1,8 @@
 <div class="container">
 
-  <header>
+  <div class="titlegroup">
     <h1 class="billing-header">{{org.info.name}}</h1>
-  </header>
+  </div>
 
   <div class="tabs">
     <div class="tab-nav-container">
