--- a/templates/user/password.hbs
+++ b/templates/user/password.hbs
@@ -1,9 +1,9 @@
 {{> profile-secondary-nav}}
 
 <div class="container narrow">
-  <header>
+  <div class="titlegroup">
     <h1>change password</h1>
-  </header>
+  </div>
 
   <form data-tab="password" method="post" action="/password">
 
