--- a/assets/styles/_header.styl
+++ b/assets/styles/_header.styl
@@ -382,9 +382,23 @@ body>nav
     text-align center
     color green
 
-  img
-    display inline-block
-    max-width 140px
+img
+  display inline-block
+  max-width 140px
+
+.titlegroup
+  display block
+  margin 0 0 30px 0
+  h2,h3
+    text-align center
+  h2
+    color white
+    font-size 36px
+    font-weight 600
+  h3
+    @extend .featherweight-heading
+    font-size 24px
+    color rgba(white, 0.8)
 
   a.button
     color rgba(background-color, 0.8)
