--- a/assets/styles/typography.styl
+++ b/assets/styles/typography.styl
@@ -68,6 +68,25 @@ h2
     a
       font-weight 600
 
+.titlegroup
+  margin 25px 0
+
+  h1,h2
+    margin 0
+    padding 0
+    text-align center
+    a
+      color greigh1
+      text-decoration none
+      &:hover
+        text-decoration underline
+
+  h2
+    font-weight 300
+    line-height 1.2
+    a
+      font-weight 300
+
 h3
   display block
   margin 0
