--- a/templates/company/contact.hbs
+++ b/templates/company/contact.hbs
@@ -1,10 +1,10 @@
    <div class="content-column">
 
     <div id="readme">
-    <header>
+    <div class="titlegroup">
       <h1>Contact Us</h1>
       <h2>We're building a bunch of awesome products. If you're interested in working with us, or have a burning feature request you want to talk about, then let us know.</h2>
-    </header>
+    </div>
 
     {{#if sent}}
       <p>Thanks for reaching out! One of us will get back to you as soon as possible.</p>
