--- a/templates/company/whoshiring.hbs
+++ b/templates/company/whoshiring.hbs
@@ -1,7 +1,7 @@
-<header>
+<div class="titlegroup">
   <h1>{{t "company.whoshiring.title"}}</h1>
   <h2>{{t "company.whoshiring.subtitle"}}</h2>
-</header>
+</div>
 
 <div class="hiring-container" data-template="full"></div>
 
