--- a/templates/enterprise/complete.hbs
+++ b/templates/enterprise/complete.hbs
@@ -1,9 +1,9 @@
 <div class="container tablet-width">
 
-  <header>
+  <div class="titlegroup">
     <h1>npm On-Site</h1>
     <h2>Signup complete. Time to install!</h2>
-  </header>
+  </div>
 
   <p>Thank you for trying out npm On-Site. To get started, make sure you have a fresh machine that meets the
     <a href="{{requirementsUrl}}">installation requirements</a>, then
