--- a/templates/enterprise/find-license.hbs
+++ b/templates/enterprise/find-license.hbs
@@ -1,9 +1,9 @@
 <div class="container tablet-width">
 
-  <header>
+  <div class="titlegroup">
     <h1>npm On-Site</h1>
     <h2>Licensing</h2>
-  </header>
+  </div>
 
   <section>
     <h2>Step 1: confirm your email address</h2>
