--- a/templates/enterprise/index.hbs
+++ b/templates/enterprise/index.hbs
@@ -1,9 +1,9 @@
 <div class="container tablet-width">
 
-  <header>
+  <div class="titlegroup">
     <h1>npm On-Site</h1>
     <h2>Run your own on-premises npm registry</h2>
-  </header>
+  </div>
 
 {{#unless errors}}
 
