--- a/templates/enterprise/thanks.hbs
+++ b/templates/enterprise/thanks.hbs
@@ -1,8 +1,8 @@
 <div class="container tablet-width">
-  <header>
+  <div class="titlegroup">
     <h1>npm On-Site</h1>
     <h2>time to check your email</h2>
-  </header>
+  </div>
 
   <p>
     A verification link has been sent to your email. Click the link in the
