--- a/templates/errors/token-expired.hbs
+++ b/templates/errors/token-expired.hbs
@@ -1,9 +1,9 @@
 <div class="container narrow">
 
-  <header>
+  <div class="titlegroup">
     <h1>{{t "errors.token_expired.title"}}</h1>
     <h2>{{t "errors.token_expired.subtitle"}}</h2>
-  </header>
+  </div>
 
   <p>
     The email you received has a one-time-use-only link.
