--- a/templates/user/email-edit.hbs
+++ b/templates/user/email-edit.hbs
@@ -2,9 +2,9 @@
 
 <div class="container narrow">
 
-  <header>
+  <div class="titlegroup">
     <h1>edit email address</h1>
-  </header>
+  </div>
 
   {{#unless submitted}}
 
