--- a/templates/user/password-recovery-form.hbs
+++ b/templates/user/password-recovery-form.hbs
@@ -1,9 +1,9 @@
 <div class="container narrow">
 
-  <header>
+  <div class="titlegroup">
     <h1>{{t "user.password.title"}}</h1>
     <h2>{{t "user.password.subtitle"}}</h2>
-  </header>
+  </div>
 
   {{#if sent}}
     <p class="center">{{t "user.password.emailed"}}</p>
