--- a/templates/user/profile-edit.hbs
+++ b/templates/user/profile-edit.hbs
@@ -2,9 +2,9 @@
 
 <div class="container narrow">
 
-  <header>
+  <div class="titlegroup">
     <h1>edit your profile</h1>
-  </header>
+  </div>
 
   {{#if showWelcomeMessage}}
     <p class="notice">
