--- a/assets/styles/reset.styl
+++ b/assets/styles/reset.styl
@@ -5,7 +5,7 @@ small, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figcaption, figure,
-footer, header, menu, nav, section, summary,
+footer, header, .titlegroup, menu, nav, section, summary,
 time, mark, audio, video
   margin 0
   padding 0
@@ -15,7 +15,7 @@ time, mark, audio, video
   vertical-align baseline
 
 article, aside, details, figcaption, figure,
-footer, header, menu, nav, section
+footer, header, .titlegroup, menu, nav, section
   display block
 
 hr
